--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <body>
 
     <div class="TituloMiauPan">
-      <h1 class="neon" data-text="[MiauPan]"><span class="flickering-3">[</span>Mi<span class="flickering-1">a</span>uP<span class="flickering-3">a</span>n]<span class="flickering-2"></span><span class="flickering-3"></span></h1>
+      <h1 class="neon" data-text="[MioPan]"><span class="flickering-3">[</span>Mi<span class="flickering-1">a</span>uP<span class="flickering-3">a</span>n]<span class="flickering-2"></span><span class="flickering-3"></span></h1>
     </div>
 
     <div id="box1">
