--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <body>
 
     <div class="TituloMiauPan">
-      <h1 class="neon" data-text="[MioPan]"><span class="flickering-3">[</span>Mi<span class="flickering-1">a</span>uP<span class="flickering-3">a</span>n]<span class="flickering-2"></span><span class="flickering-3"></span></h1>
+      <h1 class="neon" data-text="[MioPan]"><span class="flickering-3">[</span>Mi<span class="flickering-1">o</span>P<span class="flickering-3">a</span>n]<span class="flickering-2"></span><span class="flickering-3"></span></h1>
     </div>
 
     <div id="box1">
@@ -73,9 +73,9 @@
       		<nav>
       			<ul>
       				<li><a href="#"><span class="icon-home"></span>Inicio</a></li>
-      				<li><a href="#"><span class="icon-newspaper"></span>Noticias</a></li>
+      				<li><a href="#"><span class="icon-newspaper"></span>Novedades</a></li>
       				<li class="submenu">
-      					<a href="#"><span class="icon-clipboard" aria-hidden="true"></span>Nosotros<span class="caret icon-arrow-down6"></span></a>
+      					<a href="#"><span class="icon-clipboard" aria-hidden="true"></span>Contactos<span class="caret icon-arrow-down6"></span></a>
       					<ul class="children">
       						<li><a href="#">Terminos y condiciones <span class="icon-dot"></span></a></li>
       						<li><a href="#">Caja de reclamos <span class="icon-dot"></span></a></li>
